<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_register"
    tools:context=".RegisterFragment">

    <ImageView
        android:id="@+id/register_iv_banner"
        android:contentDescription="@string/register_banner"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image_belajar_fleksibel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_iv_banner" />

    <TextView
        android:id="@+id/tv_register_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register_description"
        app:layout_constraintEnd_toEndOf="@id/tv_register_title"
        app:layout_constraintStart_toStartOf="@id/tv_register_title"
        app:layout_constraintTop_toBottomOf="@id/tv_register_title" />

    <my.storyapp.customview.CustomEditTextName
        android:id="@+id/ed_register_name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_name"
        app:layout_constraintEnd_toEndOf="@id/tv_register_title"
        app:layout_constraintStart_toStartOf="@id/tv_register_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_description" />

    <my.storyapp.customview.CustomEditTextEmail
        android:id="@+id/ed_register_email"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_username"
        app:layout_constraintEnd_toEndOf="@id/tv_register_title"
        app:layout_constraintStart_toStartOf="@id/tv_register_title"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_name" />

    <my.storyapp.customview.CustomEditTextPassword
        android:id="@+id/ed_register_password"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/tv_register_title"
        app:layout_constraintStart_toStartOf="@id/tv_register_title"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_email" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/action_forbidden"
        app:layout_constraintEnd_toEndOf="@+id/tv_register_title"
        app:layout_constraintStart_toStartOf="@+id/tv_register_title"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_password" />

    <ProgressBar
        android:id="@+id/register_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
