<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/login_iv_banner"
        android:contentDescription="@string/welcome_banner"
        android:scaleType="centerCrop"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:src="@drawable/image_kurikulum_global"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_authentication_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/authentication_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_iv_banner" />

    <my.storyapp.customview.CustomEditTextEmail
        android:id="@+id/ed_login_email"
        android:hint="@string/hint_username"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="@id/tv_authentication_title"
        app:layout_constraintStart_toStartOf="@id/tv_authentication_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_authentication_title" />

    <my.storyapp.customview.CustomEditTextPassword
        android:id="@+id/ed_login_password"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="@id/tv_authentication_title"
        app:layout_constraintStart_toStartOf="@id/tv_authentication_title"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_email" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:text="@string/action_forbidden"
        app:layout_constraintEnd_toEndOf="@+id/ed_login_email"
        app:layout_constraintStart_toStartOf="@+id/ed_login_email"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_password" />

    <ProgressBar
        android:id="@+id/login_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
